completed her section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,48 @@
-<p>home works!</p>
+<div class="container">
+    <div class="hero-section-container">
+        <div class="side-menu-container">
+            <div class="menu-btn">
+                <button><i class="fa-solid fa-bars"></i></button>
+            </div>
+            <div class="side-menu">
+                <ul>
+                    <li>Women's Fashion <i class="fa-solid fa-chevron-right"></i></li>
+                    <li>Men's Fashion <i class="fa-solid fa-chevron-right"></i></li>
+                    <li>Electronics</li>
+                    <li>Home & Lifestyle</li>
+                    <li>Medicine</li>
+                    <li>Sports & Outdoor</li>
+                    <li>Baby's & Toys</li>
+                    <li>Groceries & Pets</li>
+                    <li>Health & Beauty</li>
+                </ul>
+            </div>
+        </div>
+        <div class="hero-section-slideshow">
+            <div class="slide-section-container">
+                <div class="slide-side-container slide-flex">
+                    <div class="apple-hero">
+                        <p><i class="fa-brands fa-apple"></i> <span>iPhone 14 Series</span></p>
+                    </div>
+                    <div class="hero-section-note">
+                        <h1>Up to 10% off Voucher</h1>
+                    </div>
+                    <div class="shop-now">
+                        <a [routerLink]="''">Shop Now <span><i class="fa-solid fa-arrow-right"></i></span></a>
+                    </div>
+                </div>
+                <div class="auto-slideshow slide-flex">
+                    <div class="image-slideshow">
+                        <img src="../../assets/images/hero.svg" alt="hero">
+                    </div>
+                    <div class="image-slideshow">
+                        <img src="../../assets/images/boombox.svg" alt="boombox">
+                    </div>
+                    <div class="image-slideshow">
+                        <img src="../../assets/images/north.svg" alt="north">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
