--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,4 +45,37 @@
             </div>
         </div>
     </div>
+    <div class="flashsale-container">
+        <div class="today-container">
+            <div class="today-box"></div>
+            <span>Today's</span>
+        </div>
+        <div class="flashsale">
+            <div class="flashsale-header">
+                <span>Flash Sales</span>
+                <div class="time-countdown">
+                    <div>
+                        <p>Days</p>
+                        <p>{{days}}</p>
+                    </div>
+                    <span>:</span>
+                    <div>
+                        <p>Hours</p>
+                        <p>{{hours}}</p>
+                    </div>
+                    <span>:</span>
+                    <div>
+                        <p>Minutes</p>
+                        <p>{{minutes}}</p>
+                    </div>
+                    <span>:</span>
+                    <div>
+                        <p>Seconds</p>
+                        <p>{{seconds}}</p>
+                    </div>
+                    <!-- <span></span> -->
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
