--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -45,7 +45,7 @@
     .menu-headers{position:relative;}
     .menu-headers{width:100%;justify-content:end;}
     .menu-category{flex-direction:column-reverse;justify-content:start;width:100%;top:90px;position:fixed;align-items:start;}
-    .menu-category{padding:20px 20px 0;height:100dvh;background-color:#FB1314}
+    .menu-category{padding:20px 20px 0;height:100dvh;background-color:#db4444}
     .menu-category ul{flex-direction:column;width:50%;gap:20px 0;margin-top:30px;}
     .menu-search{margin-left:0;margin-top:20px;}
     .menu-search input,.menu-search{width:100%;}
