--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,4 @@
 *,::after,::before{padding:0;margin:0;outline:none;box-sizing:border-box;}
 body{font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
 body,html{font-family:'Poppins';scroll-behavior:smooth;}
+* a{text-decoration:none;}
