--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container" [appApp]="{fixed:hideMenu}">
+<div class="app-container" [appApp]="{fixed:hideMenu}">
   <app-header (display)="display($event)"></app-header>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
