--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,18 @@
-<div class="signup-container">
-    <div class="signup-image">
+<div class="login-container">
+    <div class="login-image">
         <div class="image-card">
-            <img [src]="signupimg" alt="signup-image">
+            <img [src]="loginimg" alt="login-image">
         </div>
     </div>
-    <div class="signup-header">
-        <div class="signup-card">
-            <div class="signup-head">
-                <p>Create an account</p>
+    <div class="login-header">
+        <div class="login-card">
+            <div class="login-head">
+                <p>Login to aboShopify</p>
                 <span>Enter your details below</span>
             </div>
-            <div class="signup-form">
+            <div class="login-form">
                 <div class="form">
-                    <div class="form-input">
+                    <div class="form-input" hidden>
                         <label for="name">
                             <input
                             autocomplete="off" 
@@ -60,19 +60,10 @@
                         <div class="submit-btn">
                             <button 
                             type="submit" 
-                            [ngStyle]="{backgroundColor: passwordInput == '' ||  emailInput == '' || nameInput == '' ? '#ed8e86' : '#EA4335'}"
-                            [disabled]="passwordInput == '' || emailInput == '' || nameInput == ''">Create Account</button>
+                            [ngStyle]="{backgroundColor: passwordInput == '' ||  emailInput == '' ? '#ed8e86' : '#EA4335'}"
+                            [disabled]="passwordInput == '' || emailInput == ''">Create Account</button>
+                            <button>Forgot Password?</button>
                         </div>
-                    </div>
-                    <div class="form-input">
-                        <div class="submit-btn">
-                            <button type="button">
-                                <i class="fa-brands fa-google"></i> &nbsp; Sign up with Google
-                            </button>
-                        </div>
-                    </div>
-                    <div class="form-input login">
-                        <p>Already have an account? &nbsp; <span class="login-link"><a [routerLink]="'/login'">Login</a></span></p>
                     </div>
                 </div>
             </div>
