--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -52,6 +52,28 @@
 .menu-btn button{background-color:transparent;border:none;}
 .menu-btn button i{font-size:1.5rem;}
 
+.flashsale-product-container{margin-top:50px;}
+.flashsale-products{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));flex-wrap:wrap;gap:20px 30px;}
+.product-image{width:100%;aspect-ratio:1;background-color:#f5f5f5;position:relative;border-radius:4px;}
+.wishlist-btn{padding:10px;border-radius:50%;border:none;background-color:#fff;position:absolute;top:7%;right:7%;}
+.wishlist-btn i{font-size:1.5rem;}
+.product-image-card{width:100%;aspect-ratio:1;padding:30px;}
+.product-image-card img{width:100%;aspect-ratio:1;}
+.product-discount{position:absolute;top:7%;left:7%;}
+.product-discount{background-color:#db4444;padding:4px 14px;border-radius:4px;display:flex;align-items:center;justify-content:center;}
+.product-discount p{text-align:center;color:#fff;font-size:.9rem;}
+
+.product-description{display:flex;flex-direction:column;gap:5px 0;margin-top:15px;}
+.product-name p{font-weight:600;text-transform:capitalize;font-size:1rem;}
+.product-price{display:flex;align-items:center;gap:0 20px;}
+.product-price p{font-size:.8rem;}
+.product-price p:first-child{color:#db4444;}
+.product-price p:last-child{color:#808080;text-decoration:line-through;}
+.product-rating{display:flex;align-items:center;gap:0 10px;}
+.product-rating ul{display:flex;gap:0 5px;align-items:center;}
+.product-rating ul li{list-style:none;}
+.product-rating ul li i{color:#ffad33;font-size:1rem;}
+
 @media screen and (max-width:768px){
     .hero-section-container{flex-direction:column;width:100%;}
     .side-menu-container{border-right:none;grid-template-columns:initial;padding:0px;background-color:#000;}
@@ -69,4 +91,5 @@
     .flashsale-header{flex-direction:column;align-items:normal;}
     .time-countdown div p:first-child{font-size:.85rem;}
     .side-menu.display{display:block;}
+    .flashsale-products{gap:35px 10px;grid-template-columns:repeat(auto-fit,minmax(calc(250px / 2),1fr));}
 }
