--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -73,7 +73,36 @@
                         <p>Seconds</p>
                         <p>{{seconds}}</p>
                     </div>
-                    <!-- <span></span> -->
+                </div>
+            </div>
+        </div>
+        <div class="flashsale-product-container">
+            <div class="flashsale-products">
+                <div class="product-container" *ngFor="let product of products">
+                    <div class="product-image">
+                        <div class="product-discount"><p>-{{product.discount}}%</p></div>
+                        <div class="product-image-card">
+                            <img [src]="product.image" [alt]="product.name">
+                        </div>
+                        <button class="wishlist-btn"><i class="fa-regular fa-heart"></i></button>
+                    </div>
+                    <div class="product-description">
+                        <div class="product-name"><p>{{product.name}}</p></div>
+                        <div class="product-price">
+                            <p>${{product.price}}</p>
+                            <p>${{product.old}}</p>
+                        </div>
+                        <div class="product-rating">
+                            <ul>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                                <li><i class="fa-solid fa-star"></i></li>
+                            </ul>
+                            <p>({{product.review}})</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
