--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -51,21 +51,21 @@
 .time-countdown span{color:#db4444;font-size:1.7rem;}
 .menu-btn button{background-color:transparent;border:none;}
 .menu-btn button i{font-size:1.5rem;}
-
 .flashsale-product-container{margin-top:50px;}
 .flashsale-products{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));flex-wrap:wrap;gap:20px 30px;}
 .product-image{width:100%;aspect-ratio:1;background-color:#f5f5f5;position:relative;border-radius:4px;}
-.wishlist-btn{padding:10px;border-radius:50%;border:none;background-color:#fff;position:absolute;top:7%;right:7%;}
+.wishlist-btn{padding:7px;border-radius:50%;border:none;background-color:#fff;position:absolute;top:7%;right:7%;cursor:pointer;}
 .wishlist-btn i{font-size:1.5rem;}
-.product-image-card{width:100%;aspect-ratio:1;padding:30px;}
-.product-image-card img{width:100%;aspect-ratio:1;}
+.product-image-card{width:100%;aspect-ratio:1;}
+.image-product-card{width:100%;padding:20px 30px;}
+.add-to-cart-btn{width:100%;padding:10px 0;color:#fff;font-weight:500;font-family:'Inter';font-size:1rem;background-color:#000;border-radius:0 0 4px 4px;}
+.product-image-card img{width:100%;aspect-ratio:1;object-fit:contain;}
 .product-discount{position:absolute;top:7%;left:7%;}
 .product-discount{background-color:#db4444;padding:4px 14px;border-radius:4px;display:flex;align-items:center;justify-content:center;}
 .product-discount p{text-align:center;color:#fff;font-size:.9rem;}
-
 .product-description{display:flex;flex-direction:column;gap:5px 0;margin-top:15px;}
 .product-name p{font-weight:600;text-transform:capitalize;font-size:1rem;}
-.product-price{display:flex;align-items:center;gap:0 20px;}
+.product-price{display:flex;align-items:center;gap:0 10px;}
 .product-price p{font-size:.8rem;}
 .product-price p:first-child{color:#db4444;}
 .product-price p:last-child{color:#808080;text-decoration:line-through;}
@@ -78,7 +78,7 @@
     .hero-section-container{flex-direction:column;width:100%;}
     .side-menu-container{border-right:none;grid-template-columns:initial;padding:0px;background-color:#000;}
     .side-menu-container *,.side-menu ul li i{color:#fff;}
-    .menu-btn{display:flex;justify-content:end;padding:15px 20px;border-bottom:1px solid #fff;}
+    .menu-btn{display:flex;justify-content:end;padding:5px 20px;border-bottom:1px solid #fff;}
     .side-menu{padding:20px 20px 35px;display:none;}
     .side-menu ul{flex-direction:row;flex-wrap:wrap;gap:20px 25px;}
     .side-menu ul li{justify-content:initial;}
