--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -53,6 +53,7 @@
 .menu-btn button i{font-size:1.5rem;}
 .flashsale-product-container{margin-top:50px;}
 .flashsale-products{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));flex-wrap:wrap;gap:20px 30px;}
+.product-container{display:flex;flex-direction:column;justify-content:space-between;}
 .product-image{width:100%;aspect-ratio:1;background-color:#f5f5f5;position:relative;border-radius:4px;}
 .wishlist-btn{padding:7px;border-radius:50%;border:none;background-color:#fff;position:absolute;top:7%;right:7%;cursor:pointer;}
 .wishlist-btn i{font-size:1.5rem;}
