--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -87,7 +87,12 @@
                             </div>
                             <button class="add-to-cart-btn">Add To Cart</button>
                         </div>
-                        <button class="wishlist-btn"><i class="fa-regular fa-heart"></i></button>
+                        <button class="wishlist-btn">
+                            <i 
+                            #heart 
+                            class="fa-regular fa-heart" 
+                            (click)="addToWishList(product,heart)"></i>
+                        </button>
                     </div>
                     <div class="product-description">
                         <div class="product-name"><p>{{product.name}}</p></div>
