--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -56,7 +56,7 @@
 .product-container{display:flex;flex-direction:column;justify-content:space-between;}
 .product-image{width:100%;aspect-ratio:1;background-color:#f5f5f5;position:relative;border-radius:4px;}
 .wishlist-btn{padding:7px;border-radius:50%;border:none;background-color:#fff;position:absolute;top:7%;right:7%;cursor:pointer;}
-.wishlist-btn i{font-size:1.5rem;}
+.wishlist-btn i{font-size:1.5rem;color:#db4444;}
 .product-image-card{width:100%;aspect-ratio:1;}
 .image-product-card{width:100%;padding:20px 30px;}
 .add-to-cart-btn{width:100%;padding:10px 0;color:#fff;font-weight:500;font-family:'Inter';font-size:1rem;background-color:#000;border-radius:0 0 4px 4px;}
@@ -75,6 +75,10 @@
 .product-rating ul li{list-style:none;}
 .product-rating ul li i{color:#ffad33;font-size:1rem;}
 
+.product-image-card{position:relative;}
+.product-image-card:hover .add-to-cart-btn{visibility:visible;}
+.add-to-cart-btn{position:absolute;bottom:0;border:none;cursor:pointer;}
+
 @media screen and (max-width:768px){
     .hero-section-container{flex-direction:column;width:100%;}
     .side-menu-container{border-right:none;grid-template-columns:initial;padding:0px;background-color:#000;}
@@ -92,5 +96,6 @@
     .flashsale-header{flex-direction:column;align-items:normal;}
     .time-countdown div p:first-child{font-size:.85rem;}
     .side-menu.display{display:block;}
-    .flashsale-products{gap:35px 10px;grid-template-columns:repeat(auto-fit,minmax(calc(250px / 2),1fr));}
+    .flashsale-products{gap:35px 10px;grid-template-columns:repeat(auto-fill,minmax(calc(250px / 2),1fr));}
+    /* .add-to-cart-btn{visibility:visible;} */
 }
