--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,20 +80,20 @@
             <div class="flashsale-products">
                 <div class="product-container" *ngFor="let product of products;" #productContainer>
                     <div class="product-image">
-                        <div class="product-discount"><p>-{{product.discount}}%</p></div>
+                        <div class="product-discount" *ngIf="product.discount > 0"><p>-{{product.discount}}%</p></div>
                         <div class="product-image-card">
                             <div class="image-product-card">
                                 <img [src]="product.image" [alt]="product.name">
                             </div>
-                            <button class="add-to-cart-btn">Add To Cart</button>
+                            <!-- <button class="add-to-cart-btn">Add To Cart</button> -->
                         </div>
+                        <button class="add-to-cart-btn">Add To Cart</button>
                         <button class="wishlist-btn">
                             <i 
                             #heart 
                             class="fa-regular fa-heart" 
-                            [ngClass]="faSolid"
                             [attr.data-id]="product.id"
-                            (click)="addToWishList(product,heart)"></i>
+                            (click)="getProduct(productContainer,product)"></i>
                         </button>
                     </div>
                     <div class="product-description">
