--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,13 +38,13 @@
             <ul>
               <li>
                 <button [routerLink]="'wishlist'">
-                  <span *ngIf="number > 0">{{number}}</span>
-                  <i class="fa-regular fa-heart" [ngClass]="number > 0 ? 'fa-solid fa-heart' : 'fa-regular fa-heart'"></i>
+                  <span *ngIf="wishListNumber > 0">{{wishListNumber}}</span>
+                  <i class="fa-regular fa-heart" [ngClass]="wishListNumber > 0 ? 'fa-solid fa-heart' : 'fa-regular fa-heart'"></i>
                 </button>
               </li>
               <li>
                 <button>
-                  <!-- <span  *ngIf="number > 0">{{number}}</span> -->
+                  <span  *ngIf="cartNumber > 0">{{cartNumber}}</span>
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </li>
