--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,7 +43,7 @@
                 </button>
               </li>
               <li>
-                <button>
+                <button [routerLink]="'cart'">
                   <span  *ngIf="cartNumber > 0">{{cartNumber}}</span>
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
