--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -86,7 +86,7 @@
                                 <img [src]="product.image" [alt]="product.name">
                             </div>
                             <button class="add-to-cart-btn" (click)="addToCart(productContainer,product)">Add To Cart</button>
-                            <div class="quantity-btn-container" #quantity>
+                            <div class="quantity-btn-container" #quantity [attr.cart-id]="product.id">
                                 <button (click)="decreaseCartQuanity(product,productContainer)"><i class="fa-solid fa-minus"></i></button>
                                 <span>{{product.quantity}}</span>
                                 <button (click)="increaseCartQuantity(product)"><i class="fa-solid fa-plus"></i></button>
@@ -103,8 +103,8 @@
                     <div class="product-description">
                         <div class="product-name"><p>{{product.name}}</p></div>
                         <div class="product-price">
-                            <p>${{product.price}}</p>
-                            <p>${{product.old}}</p>
+                            <p>&#x20A6;{{product.price}}</p>
+                            <p>&#x20A6;{{product.old}}</p>
                         </div>
                         <div class="product-rating">
                             <ul>
@@ -173,8 +173,8 @@
                         <div class="product-description">
                             <div class="product-name"><p>{{product.name}}</p></div>
                             <div class="product-price">
-                                <p>${{product.price}}</p>
-                                <p>${{product.old}}</p>
+                                <p>&#x20A6;{{product.price}}</p>
+                                <p>&#x20A6;{{product.old}}</p>
                             </div>
                             <div class="product-rating">
                                 <ul>
