--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
                         <p>Subscribe</p>
                         <p>Get 10% off your first order</p>
                         <div class="subscribe-input">
-                            <input type="text" name="email" placeholder="Enter your mail">
+                            <input type="text" name="email" autocomplete="off" placeholder="Enter your mail">
                             <button><i class="fa-solid fa-envelope"></i></button>
                         </div>
                     </div>
