--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -53,7 +53,7 @@
 .menu-btn button i{font-size:1.5rem;}
 .flex-product-container{margin-top:50px;}
 .flex-products{display:grid;grid-template-columns:repeat(auto-fill,minmax(250px,1fr));flex-wrap:wrap;gap:20px 30px;}
-.product-container{display:flex;flex-direction:column;justify-content:space-between;box-shadow:0px 0px 5px #f5f5f5;}
+.product-container{display:flex;flex-direction:column;justify-content:space-between;}
 .product-image{width:100%;aspect-ratio:1;background-color:#f5f5f5;position:relative;border-radius:4px;}
 .wishlist-btn{padding:7px;border-radius:50%;border:none;background-color:#fff;position:absolute;top:7%;right:7%;cursor:pointer;}
 .wishlist-btn i{font-size:1.5rem;color:#db4444;}
@@ -91,7 +91,7 @@
 .quantity-btn-container{width:100%;justify-content:space-between;position:absolute;bottom:0;align-items:center;background-color:#000;}
 .quantity-btn-container{padding:5px 20px;display:none;}
 .quantity-btn-container button{padding:5px 8px;font-weight:500;font-family:'Inter';font-size:1rem;border:none;border-radius:4px;cursor:pointer;}
-.quantity-btn-container span{color:#fff;font-size:1rem;cursor:pointer;}
+.quantity-btn-container span{color:#fff;font-size:1rem;cursor:pointer;font-family:'Inter';font-weight:500;}
 .add-to-cart-btn.hide{display:none;}
 .quantity-btn-container.show{display:flex;}
 
