--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -160,7 +160,12 @@
                                 <div class="image-product-card">
                                     <img [src]="product.image" [alt]="product.name">
                                 </div>
-                                <button class="add-to-cart-btn">Add To Cart</button>
+                                <button class="add-to-cart-btn" (click)="addToCart(productContainer,product)">Add To Cart</button>
+                                <div class="quantity-btn-container" #quantity [attr.cart-id]="product.id">
+                                    <button (click)="decreaseCartQuanity(product,productContainer)"><i class="fa-solid fa-minus"></i></button>
+                                    <span>{{product.quantity}}</span>
+                                    <button (click)="increaseCartQuantity(product)"><i class="fa-solid fa-plus"></i></button>
+                                </div>
                             </div>
                             <button class="wishlist-btn">
                                 <i 
