--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -28,7 +28,7 @@
                             <i 
                             class="fa-regular fa-trash-can" 
                             [attr.data-id]="product.id"
-                            (click)="addToWishList(product)"></i>
+                            (click)="removeFromWishList(product)"></i>
                         </button>
                     </div>
                     <div class="product-description">
