--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -24,16 +24,17 @@
 .cart-rating ul li{list-style:none;}
 .cart-rating ul li i{color:#ffad33;font-size:1.1rem;}
 .cart-rating p{font-size:1.1rem;color:#000;}
-.cart-quantity{display:flex;flex-direction:column;gap:15px 0;align-items:center;}
+.cart-quantity{display:flex;flex-direction:column;gap:15px 0;align-items:center;width:100px;}
+.cart-quantity-btn{width:100%;}
 .remove-cart-icon button{background-color:transparent;border:none;}
 .remove-cart-icon button i{font-size:1.8rem;color:#db4444;}
-.quantity-btn{display:flex;gap:0 10px;align-items:center;}
+.quantity-btn{display:flex;gap:0 10px;align-items:center;justify-content:space-between;}
 .quantity-btn button{padding:4px 6px;color:#fff;font-weight:500;border-radius:4px;box-shadow:0px 0px 5px 5px#f5f5f5;font-family:'Inter';}
 .quantity-btn button:last-child{background-color:#db4444;}
 .quantity-btn button{border:none;font-size:.9rem;}
 .quantity-btn button i{color:#fff;font-size:.9rem;}
-.quantity-btn span{font-family:'Inter';font-weight:500;font-size:1.1rem;color:#000;}
-.quantity-btn button:disabled.disabled{background-color:-internal-light-dark(rgba(239, 239, 239, 0.3),rgba(19, 1, 1, 0.3))!important;color:-internal-light-dark(rgba(16, 16, 16, 0.3),rgba(255, 255, 255, 0.3))!important;box-shadow:none;}
+.quantity-btn span{font-family:'Inter';font-weight:500;font-size:.9rem;color:#000;}
+.quantity-btn button.disabled{box-shadow:none;}
 
 
 
