--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -89,7 +89,7 @@
 .selling-products-container{width:90%;margin:0 auto;}
 
 .quantity-btn-container{width:100%;justify-content:space-between;position:absolute;bottom:0;align-items:center;background-color:#000;}
-.quantity-btn-container{padding:5px 20px;display:none;}
+.quantity-btn-container{padding:5px 20px;display:none;border-radius:0 0 4px 4px;}
 .quantity-btn-container button{padding:5px 8px;font-weight:500;font-family:'Inter';font-size:1rem;border:none;border-radius:4px;cursor:pointer;}
 .quantity-btn-container span{color:#fff;font-size:1rem;cursor:pointer;font-family:'Inter';font-weight:500;}
 .add-to-cart-btn.hide{display:none;}
